--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 ---
 layout: default
-title: Canjianx's garage
+title: Canjian's garage
 ---
 
 <div id="home">
-  <h1>Blog Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
-      	{{post.excerpt}}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a><br>
+      	{{ post.excerpt | remove: '<p>' | remove: '</p>' }}
       </li>
     {% endfor %}
   </ul>
