--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@ title: Canjian's garage
 ---
 
 <div id="home">
-  <ul class="posts">
+  <ul class="posts row">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a><br>
+      <li class="postCell col-xs-6 col-md-4">
+      	<span>{{ post.date | date_to_string }}</span><br><a href="{{ post.url }}">{{ post.title }}</a><br>
       	{{ post.excerpt | remove: '<p>' | remove: '</p>' }}
       </li>
     {% endfor %}
