--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@ title: Canjian's garage
 <div id="home">
   <ul class="posts row">
     {% for post in site.posts %}
-      <li class="postCell col-xs-6 col-md-4">
-      	<span>{{ post.date | date_to_string }}</span><br><a href="{{ post.url }}">{{ post.title }}</a><br>
-      	{{ post.excerpt | remove: '<p>' | remove: '</p>' }}
+      <li class="postli col-xs-6 col-md-4">
+      	<div class="postCell">
+	      	<span>{{ post.date | date_to_string }}</span><br><a href="{{ post.url }}">{{ post.title }}</a><br>
+	      	{{ post.excerpt | remove: '<p>' | remove: '</p>' }}
+      	</div>
       </li>
     {% endfor %}
   </ul>
