--- a/about.html
+++ b/about.html
@@ -5,4 +5,5 @@ title: Canjian's garage
 
 <div class="container">
 <p>My name is Peng.Zhang</p>
+<p>对各种工具做一个入门的介绍，主要是翻译一下各种工具或技术的入门文档。或者readme。主要是前端技术。</p>
 </div>
