--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@ title: Canjian's garage
     {% for post in site.posts %}
       <li class="postli col-xs-6 col-md-4">
       	<div class="postCell">
-	      	<span>{{ post.date | date_to_string }}</span><br><h2><a href="{{ post.url }}">{{ post.title }}</a></h2><br>
+	      	<h4><a href="{{ post.url }}">{{ post.title }}</a></h4><br>
 	      	{{ post.excerpt | remove: '<p>' | remove: '</p>' }}
+          <br><span>{{ post.date | date_to_string }}</span>
       	</div>
       </li>
     {% endfor %}
